tests/files/type_checker_tests/should_pass/125.cmdr
//Test that or operation type checks
x = true || false;
