tests/files/type_checker_tests/should_fail/031.cmdr
//Should fail on or when types are incompatible
x = true || 1;